--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 <body>
     <div class="produtos">
         <div class="produto">
-            <img class="produto__imagem" src="https://placehold.co/100x100">
+            <img class="produto__imagem" src="https://via.placeholder.com/100x100">
             <h4 class="produto__nome">Nome do produto</h4>
             <p class="produto__descricao">
                 Descrição do produto
             </p>
         </div>
         <div class="produto--em-destaque">
-            <img class="produto__imagem" src="https://placehold.co/100x100">
+            <img class="produto__imagem" src="https://via.placeholder.com/100x100">
             <h4 class="produto__nome">Nome do produto</h4>
             <p class="produto__descricao">
                 Descrição do produto
             </p>
         </div>
         <div class="produto">
-            <img class="produto__imagem" src="https://placehold.co/100x100">
+            <img class="produto__imagem" src="https://via.placeholder.com/100x100">
             <h4 class="produto__nome">Nome do produto</h4>
             <p class="produto__descricao">
                 Descrição do produto
@@ -32,5 +32,4 @@
         </div>
     </div>
 </body>
-
 </html>
